iptables-19-out-enp-in-t1-connmark-fails
# Generated by xtables-save v1.8.2 on Mon Apr 19 13:38:18 2021
*filter
:INPUT ACCEPT [13333:7889573]
:FORWARD ACCEPT [10941:832678]
:OUTPUT ACCEPT [5730:527386]
-A INPUT -i enp0s3 -j DROP
-A INPUT -p icmp -j LOG --log-prefix " f INP: "
-A INPUT -p tcp -j LOG --log-prefix " f INP: "
-A FORWARD -p icmp -j LOG --log-prefix " f FWD: "
-A FORWARD -p tcp -j LOG --log-prefix " f FWD: "
-A OUTPUT -p icmp -j LOG --log-prefix " f OUT: "
-A OUTPUT -p tcp -j LOG --log-prefix " f OUT: "
COMMIT
# Completed on Mon Apr 19 13:38:18 2021
# Generated by xtables-save v1.8.2 on Mon Apr 19 13:38:18 2021
*nat
:PREROUTING ACCEPT [1301:149869]
:INPUT ACCEPT [228:31949]
:POSTROUTING ACCEPT [973:61533]
:OUTPUT ACCEPT [485:32221]
-A PREROUTING -i tunvis1 -j DNAT --to-destination 192.168.101.137
-A PREROUTING -i enp0s3 -j DNAT --to-destination 10.0.2.22
-A PREROUTING -p icmp -j LOG --log-prefix "*n PRE: "
-A PREROUTING -p tcp -j LOG --log-prefix "*n PRE: "
-A INPUT -p icmp -j LOG --log-prefix "*n INP: "
-A INPUT -p tcp -j LOG --log-prefix "*n INP: "
-A POSTROUTING -p icmp -j LOG --log-prefix "*n POS> "
-A POSTROUTING -p tcp -j LOG --log-prefix "*n POS: "
-A OUTPUT -p icmp -j LOG --log-prefix "*n OUT: "
-A OUTPUT -p tcp -j LOG --log-prefix "*n OUT: "
COMMIT
# Completed on Mon Apr 19 13:38:18 2021
# Generated by xtables-save v1.8.2 on Mon Apr 19 13:38:18 2021
*mangle
:PREROUTING ACCEPT [29669:10084998]
:INPUT ACCEPT [13848:8014154]
:FORWARD ACCEPT [10941:832678]
:OUTPUT ACCEPT [5730:527386]
:POSTROUTING ACCEPT [16673:1360128]
-A PREROUTING ! -i enp0s3 -p tcp -j LOG --log-prefix " m PRE: "
-A PREROUTING -i enp0s3 -p tcp -j LOG --log-prefix "<m PRE: "
-A PREROUTING ! -i enp0s3 -p icmp -j LOG --log-prefix " m PRE: "
-A PREROUTING -i enp0s3 -p icmp -j LOG --log-prefix "<m PRE: "
-A PREROUTING -i tunvis2 -j MARK --set-xmark 0x9/0xffffffff
-A PREROUTING -i enp0s3 -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A INPUT -p icmp -j LOG --log-prefix " m INP: "
-A INPUT -p tcp -j LOG --log-prefix " m INP: "
-A FORWARD -p icmp -j LOG --log-prefix " m FWD: "
-A FORWARD -p tcp -j LOG --log-prefix " m FWD: "
-A OUTPUT -p icmp -j LOG --log-prefix ">m OUT: "
-A OUTPUT -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -p tcp -j LOG --log-prefix ">m OUT: "
-A POSTROUTING -p icmp -j LOG --log-prefix " m POS: "
-A POSTROUTING -p tcp -j LOG --log-prefix " m POS: "
-A POSTROUTING -o enp0s3 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Mon Apr 19 13:38:18 2021
