iptables-19-with-log-OK
# Generated by xtables-save v1.8.2 on Mon Apr 19 14:03:41 2021
*filter
:INPUT ACCEPT [2923:1928688]
:FORWARD ACCEPT [5086:2081406]
:OUTPUT ACCEPT [2897:385097]
-A INPUT -i enp0s3 -j DROP
-A INPUT -p icmp -j LOG --log-prefix " f INP: "
-A INPUT -p tcp -j LOG --log-prefix " f INP: "
-A FORWARD -p icmp -j LOG --log-prefix " f FWD: "
-A FORWARD -p tcp -j LOG --log-prefix " f FWD: "
-A OUTPUT -p icmp -j LOG --log-prefix " f OUT: "
-A OUTPUT -p tcp -j LOG --log-prefix " f OUT: "
COMMIT
# Completed on Mon Apr 19 14:03:41 2021
# Generated by xtables-save v1.8.2 on Mon Apr 19 14:03:41 2021
*nat
:PREROUTING ACCEPT [222:13734]
:INPUT ACCEPT [5:342]
:POSTROUTING ACCEPT [5:342]
:OUTPUT ACCEPT [222:13734]
-A PREROUTING -p icmp -j LOG --log-prefix "*n PRE: "
-A PREROUTING -i enp0s3 -j DNAT --to-destination 10.0.2.22
-A PREROUTING -i tunvis1 -j DNAT --to-destination 192.168.101.137
-A PREROUTING -p tcp -j LOG --log-prefix "*n PRE: "
-A INPUT -p icmp -j LOG --log-prefix "*n INP: "
-A INPUT -p tcp -j LOG --log-prefix "*n INP: "
-A POSTROUTING -p icmp -j LOG --log-prefix "*n POS> "
-A POSTROUTING -m mark --mark 0x1 -j SNAT --to-source 10.0.2.22
-A POSTROUTING -m mark --mark 0x9 -j SNAT --to-source 192.168.101.137
-A POSTROUTING -p tcp -j LOG --log-prefix "*n POS: "
-A OUTPUT -p icmp -j LOG --log-prefix "*n OUT: "
-A OUTPUT -p tcp -j LOG --log-prefix "*n OUT: "
COMMIT
# Completed on Mon Apr 19 14:03:41 2021
# Generated by xtables-save v1.8.2 on Mon Apr 19 14:03:41 2021
*mangle
:PREROUTING ACCEPT [8823:4245049]
:INPUT ACCEPT [3224:2045733]
:FORWARD ACCEPT [5086:2081406]
:OUTPUT ACCEPT [2897:385097]
:POSTROUTING ACCEPT [7983:2466503]
-A PREROUTING ! -i enp0s3 -p tcp -j LOG --log-prefix " m PRE: "
-A PREROUTING -i enp0s3 -p tcp -j LOG --log-prefix "<m PRE: "
-A PREROUTING ! -i enp0s3 -p icmp -j LOG --log-prefix " m PRE: "
-A PREROUTING -i enp0s3 -p icmp -j LOG --log-prefix "<m PRE: "
-A PREROUTING -i tunvis2 -j MARK --set-xmark 0x9/0xffffffff
-A INPUT -p icmp -j LOG --log-prefix " m INP: "
-A INPUT -p tcp -j LOG --log-prefix " m INP: "
-A FORWARD -p icmp -j LOG --log-prefix " m FWD: "
-A FORWARD -p tcp -j LOG --log-prefix " m FWD: "
-A OUTPUT -p icmp -j LOG --log-prefix ">m OUT: "
-A OUTPUT -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -p tcp -j LOG --log-prefix ">m OUT: "
-A OUTPUT -p tcp -j LOG --log-prefix ">m OUT: "
-A POSTROUTING -p icmp -j LOG --log-prefix " m POS: "
-A POSTROUTING -p tcp -j LOG --log-prefix " m POS: "
COMMIT
# Completed on Mon Apr 19 14:03:41 2021
